<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordResetActivity">

    <ImageView
        android:layout_width="402dp"
        android:layout_height="222dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="4dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="452dp"
        android:src="@drawable/thinking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="462dp"
        android:layout_marginTop="193dp"
        android:layout_marginBottom="76dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/we_just_need_your_registered_email_id_to_sent_you_password_reset_instructions"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColorHint="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->
        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/cirReset"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/reset_password"
            app:initialCornerAngle="27dp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />
        <Button
            android:id="@+id/backToLogin"
            android:layout_width="125dp"
            android:layout_height="27dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:text="@string/back_to_login"
            android:textColor="@color/black" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="52dp"
        android:layout_height="46dp"
        android:layout_gravity="center|bottom"
        android:layout_marginStart="181dp"
        android:layout_marginTop="647dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="38dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>