<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffffff"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            >

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="0dp"
                    android:text="\nMake \nMeditation a \nhabit \nyou love" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="194dp"
                    android:layout_height="179dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="0dp"
                    android:layout_toEndOf="@+id/textView2"
                    android:src="@drawable/ic_meditatingsloth" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="30dp">
                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/login_email_hint"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="20dp">
                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
<!--            </android.support.design.widget.TextInputLayout>-->

            <TextView
                style="@style/viewParent"
                android:text="Forgot Password?"
                android:id="@+id/forgetPwd"
                android:textColor="@color/primaryTextColor"
                android:textSize="12sp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"/>

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/cirLoginButton"
                style="@style/loginButton"
                app:spinning_bar_width="4dp"
                app:spinning_bar_color="#FFF"
                android:text="Login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                app:spinning_bar_padding="6dp"
                app:initialCornerAngle="27dp"/>

            <TextView
                style="@style/parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/themeColor"
                android:textSize="17sp"
                android:text="First Time? We got you."
                android:layout_marginTop="20dp"
                android:onClick="SwipeRight"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="12"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_weight="3"/>

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Use other Methods"
                    android:layout_weight="6"
                    android:textSize="12sp"
                    android:textAlignment="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_weight="3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp">
                <com.shobhitpuri.custombuttons.GoogleSignInButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/continue_with_the_google"
                    android:id="@+id/googleSignIn"
                    />

            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_img"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="30dp"
        android:onClick="SwipeRight"
        />

</RelativeLayout>